--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "jogodavelhaplay",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write './src/**/*.{js,jsx,ts,tsx,css,html}'",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -23,9 +24,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
+    "esbuild": "^0.18.16",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "prettier": "^3.0.0",
     "sass": "^1.63.6",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
