--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "npm run format && tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write './src/**/*.{js,jsx,ts,tsx,css,html}'",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean:webpack": "rm -rf node_modules/.cache webpack.cache.json"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
