--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
